# RCore

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  Doxyfile  LICENSE  LICENSE.md  README.md  init.sh
docs/: Alloc_2Defs_8hpp.html  Alloc_2Defs_8hpp_source.html  Alloc_2Err_8h.html  Alloc_2Err_8h_source.html  Alloc_2Own_8hpp.html  Alloc_2Own_8hpp_source.html  Alloc_2Ref_8hpp.html  Alloc_2Ref_8hpp_source.html  Alloc_8h_source.html  Alloc_8hpp_source.html  Arr_2Defs_8hpp.html  Arr_2Defs_8hpp_source.html  Arr_2Err_8h.html  Arr_2Err_8h_source.html  Arr_2Own_8hpp.html  Arr_2Own_8hpp.js  Arr_2Own_8hpp_source.html  Arr_2Ref_8hpp.html  Arr_2Ref_8hpp_source.html  Arr_8h_source.html  Arr_8hpp_source.html  BitVec_8h_source.html  BitVec_8hpp_source.html  Call_8h_source.html  Camera_8h_source.html  Cast_8h_source.html  CasterUnion_8hpp_source.html  Clock_8h_source.html  Cmp_8h_source.html  Cmp_8hpp_source.html  Dot_8h_source.html  Dot_8hpp_source.html  Event_8h_source.html  Head_8h_source.html  Idxer_8h_source.html  Idxer_8hpp_source.html  MousePoint_8h_source.html  Own_8h.html  Own_8h_source.html  Pack_8hpp.html  (+133 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_3.js  defines_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_4.js  typedefs_5.js  typedefs_6.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_6.js  variables_8.js  variables_a.js
hin/: Mig.h.in
include/GED/: CLCam.h  CLPort.h  Cam.h  Camera.h  Clock.h  Mig.h
include/GED/Core/: Camera.h  CircularQueue.h  Clock.h
include/GED/Core/Ctrl/: Event.h  MousePoint.h
include/GED/Ctrl/: Ev.h  MousePoint.h
include/GED/Mov2/: Rect.h
src/: BmpSrc.c  CLCam.c  CLPort.c  Cam.c  Camera.c  xCamera.cpp  xClock.cpp
src/Ctrl/: Ev.c  Event.c  MousePoint.c
src/Mov2/: Rect.c
test/: CMakeLists.txt  a.c
test/test0x0/: a.c
